--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,148 @@
 /* Reset */
-* {
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 /* End Reset */
 
+/* General Rules */
 body{
-  background-color: red;
-  /* font-family: 'Montserrat', sans-serif; */
+  margin-top: 100px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+  letter-spacing: -0.8px;
+}
+a{
+  text-decoration: none;
+  color: #5e6268;
+  font-weight: 500;
+}
+ul{
+  list-style-type: none;
 }
 
-/* Header */
-/* End Header */
+.selected{
+  border-bottom: 2px solid #3367d6;
+}
 
-/* Main */
-/* End Main */
+.flex-row{
+  display: flex;
+  flex-direction: row;
+}
 
-/* Footer */
-/* End Footer */
+.flex-col{
+  display: flex;
+  flex-direction: column;
+}
+/* End General Rules */
+
+/*** Header ***/
+/* Header General */
+header{
+  justify-content: space-between;
+  width: 100%;
+  height: 100px;
+  background-color: white;
+  border-bottom: 1px solid lightgray;
+  position: fixed;
+  top: 0;
+}
+/* End Header General */
+
+/* Header Logo */
+header .logo{
+  align-items: center;
+  margin: 20px;
+}
+
+header .logo a{
+  font-weight: 500;
+}
+
+header .logo img{
+  padding-right: 20px;
+  height: 25px;
+}
+/* End Header Logo */
+
+/* Header Nav */
+header nav{
+  justify-content: space-between;
+  margin: 0 20px;
+}
+header nav .navigation li{
+  margin: 0 20px;
+  padding-bottom: 10px;
+}
+header nav .navigation li.selected a{
+  color: #3367d6;
+}
+header nav .navigation li:first-child{
+  margin-left: 0;
+}
+header nav .user .circle{
+  padding: 5px 10px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #0097a7;
+  color: white;
+}
+header nav .user .mail{
+  color: #5e6268;
+  font-weight: 500;
+  font-size: 13px;
+}
+/* End Header Nav */
+/*** End Header ***/
+
+/*** Main ***/
+main {
+  margin-top: 50px;
+}
+
+main .faq-container{
+  width: 70%;
+  margin: 50px auto 15px auto;
+  padding: 60px 0;
+}
+
+main .faq-container .faq{
+  margin-top: 60px;
+}
+
+main .faq-container .faq h2{
+  margin-bottom: 20px;
+  line-height: 25px;
+  font-weight: 500;
+  color: #3c4043;
+}
+
+main .faq-container .faq p{
+  font-family: "Arial" ;
+  line-height: 25px;
+  letter-spacing: 0.5px;
+  color: #3c4043;
+}
+/*** End Main ***/
+
+/*** Footer ***/
+footer{
+  width: 100%;
+  background-color: #f5f5f5;
+}
+footer .container{
+  justify-content: space-between;
+  width: 70%;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+footer .container .sitemap ul li{
+  margin-right: 10px;
+}
+
+footer .container .sitemap ul li a{
+  font-size: 10px;
+}
+/*** End Footer ***/
